Minor homepage styling + Tailwind command in air

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,17 @@
 
 {{ template "head" "Home // " }}
 
-<body class="bg-gray-100 text-gray-900">
-    <h1>PMDb</h1>
-    <h2>Your Personal Movie Database</h2>
+<body class="bg-gray-900 text-gray-100 m-14">
+    <h1 class="text-amber-400 font-bold text-4xl">PMDb</h1>
+    <h2 class="text-amber-400 font-semibold text-2xl">Your Personal Movie Database</h2>
 
-    <h3>Welcome!</h3>
+    <section class="my-5">
+        <h3 class="text-gray-100 text-3xl font-semibold mb-2">Welcome!</h3>
+        <p>
+            PMDb is your personal space for movies! Here you can rate and review movies you watched and make watchlists
+            for movies you want to watch.
+        </p>
+    </section>
 </body>
 
 </html>
-
