--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-
-{{ template "head" "Home // " }}
-
-<body class="bg-gray-100 text-gray-900 m-14 text-center">
-    <h1 class="text-amber-500 font-semibold text-5xl">PMDb</h1>
-    <h2 class="text-amber-500 text-2xl">Your Personal Movie Database</h2>
+{{ template "top" "Home // " }}
 
     <section class="my-5 bg-gray-100 text-gray-900 p-5 border-y border-y-gray-400">
         <h3 class="text-2xl font-semibold mb-1">Welcome!</h3>
@@ -53,6 +46,5 @@
             </section>
         </div>
     </section>
-</body>
 
-</html>
+{{ template "bottom" }}
