--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {{ template "top" "Home // " }}
 
 <section class="my-5 text-gray-200 rounded-lg">
-    <blockquote class="pl-5 py-1 border-l-4 border-amber-400">
+    <blockquote class="pl-5 py-1 border-l-4 border-primary">
         <h3 class="text-2xl font-semibold mb-1">Welcome!</h3>
         <p>
             PMDb is your personal space for movies! Here you can rate and review movies you watched and make watchlists
