--- a/templates/_bottom.html
+++ b/templates/_bottom.html
@@ -1,5 +1,6 @@
 {{ define "bottom" }}
 
+</main>
 <footer class="my-5">
     Brought to you by
     <a href="https://github.com/wipdev-tech" class="text-blue-600 hover:text-blue-400" target="_blank">Waseem</a>
