--- a/templates/register.html
+++ b/templates/register.html
@@ -1,23 +1,27 @@
-{{ template "top" "Home // " }}
+{{ template "top" "Register // " }}
 
-<h3 class="text-2xl font-semibold mb-1">Register!</h3>
-<form hx-post="/add-user" hx-target="#users" hx-swap="outerHTML">
+<form hx-post="/create-user" hx-target="this" hx-swap="innerHTML" hx-indicator="#ind" hx-disabled-elt="#submit-btn">
+    <h3 class="text-2xl font-semibold mb-1">Register</h3>
     <div class="grid md:grid-cols-[9rem_1fr] gap-2 max-w-xl my-5">
         <label for="display-name">Full Name</label>
-        <input type="text" name="display-name" value="" class="border rounded px-2 py-1 text-gray-900">
+        <input type="text" name="display-name" value="" class="border rounded px-2 py-1 text-gray-900" required>
 
         <label for="user-name">User Name</label>
-        <input type="text" name="user-name" value="" class="border rounded px-2 py-1 text-gray-900">
+        <input type="text" name="user-name" value="" class="border rounded px-2 py-1 text-gray-900" required>
 
         <label for="password">Password</label>
-        <input type="password" name="password" value="" class="border rounded px-2 py-1 text-gray-900">
+        <input type="password" name="password" value="" class="border rounded px-2 py-1 text-gray-900" required>
 
         <label for="confirm-password">Confirm Password</label>
-        <input type="confirm-password" name="password" value="" class="border rounded px-2 py-1 text-gray-900">
+        <input type="password" name="confirm-password" value="" class="border rounded px-2 py-1 text-gray-900" required>
     </div>
-    <button type="submit" class="rounded px-2 py-1 bg-blue-600 text-white">
-        Let's go!
-    </button>
+
+    <div class="flex gap-2">
+        <button id="submit-btn" type="submit" class="rounded px-3 py-1 bg-blue-600 disabled:opacity-50 hover:bg-blue-500 text-white">
+            Let's go!
+        </button>
+        <img id="ind" src="/static/spin.svg" width="20" class="htmx-indicator">
+    </div>
 </form>
 
 {{ template "bottom" }}
