--- a/templates/register.html
+++ b/templates/register.html
@@ -1,23 +1,28 @@
 {{ template "top" "Register // " }}
 
-<form hx-post="/create-user" hx-target="this" hx-swap="innerHTML" hx-indicator="#ind" hx-disabled-elt="#submit-btn">
+<form id="register" hx-post="/create-user" hx-target="this" hx-swap="innerHTML" hx-indicator="#ind"
+    hx-disabled-elt="#submit-btn">
     <h3 class="text-2xl font-semibold mb-1">Register</h3>
     <div class="grid md:grid-cols-[9rem_1fr] gap-2 max-w-xl my-5">
         <label for="display-name">Full Name</label>
-        <input type="text" name="display-name" value="" class="border rounded px-2 py-1 text-gray-900" required>
+        <input type="text" id="display-name" name="display-name" value="" class="border rounded px-2 py-1 text-gray-900"
+            required>
 
         <label for="user-name">User Name</label>
-        <input type="text" name="user-name" value="" class="border rounded px-2 py-1 text-gray-900" required>
+        <input type="text" id="user-name" name="user-name" value="" class="border rounded px-2 py-1 text-gray-900"
+            required>
 
         <label for="password">Password</label>
-        <input type="password" name="password" value="" class="border rounded px-2 py-1 text-gray-900" required>
+        <input type="password" id="password" name="password" value="" class="border rounded px-2 py-1 text-gray-900"
+            placeholder="at least 8 characters long" required>
 
         <label for="confirm-password">Confirm Password</label>
-        <input type="password" name="confirm-password" value="" class="border rounded px-2 py-1 text-gray-900" required>
+        <input type="password" id="confirm-password" name="confirm-password" value=""
+            placeholder="at least 8 characters long" class="border rounded px-2 py-1 text-gray-900" required>
     </div>
 
     <div class="flex gap-2">
-        <button id="submit-btn" type="submit"
+        <button id="submit-btn" type="submit" disabled
             class="rounded px-3 py-1 my-2 bg-blue-600 disabled:opacity-50 hover:bg-blue-500 text-white">
             Let's go!
         </button>
