--- a/templates/register.html
+++ b/templates/register.html
@@ -3,44 +3,46 @@
 <form id="register" hx-post="/create-user" hx-target="this" hx-swap="innerHTML" hx-indicator="#ind"
     hx-disabled-elt="#submit-btn">
     <h3 class="text-2xl font-semibold mb-1">Register</h3>
+    <p>
+        Already have an account?
+        <a href="/login" class="text-blue-500 hover:text-blue-400">Log In</a>
+    </p>
+
     <div class="grid md:grid-cols-[9rem_1fr] gap-2 max-w-xl my-5">
         <label for="display-name">Full Name</label>
         <input type="text" id="display-name" name="display-name" value="" class="border rounded px-2 py-1 text-gray-900"
-            required>
+            hx-target="#check" hx-swap="innerHTML" hx-trigger="keyup changed delay:500ms" hx-post="/register/validate"
+            hx-indicator="#ind" required>
 
         <label for="user-name">User Name</label>
         <div class="flex gap-2">
             <input type="text" id="user-name" name="user-name" value="" class="border rounded px-2 py-1 text-gray-900"
-                hx-target="#error" hx-swap="innerHTML" hx-trigger="keyup changed delay:300ms" hx-post="/check-user-name"
-                hx-indicator="#user-name-ind" required>
+                hx-target="#check" hx-swap="innerHTML" hx-trigger="keyup changed delay:500ms"
+                hx-post="/register/validate" hx-indicator="#ind" required>
             <img id="user-name-ind" src="/static/spin.svg" width="20" class="htmx-indicator">
         </div>
 
         <label for="password">Password</label>
         <input type="password" id="password" name="password" value="" class="border rounded px-2 py-1 text-gray-900"
-            placeholder="at least 8 characters long" required>
+            hx-target="#check" hx-swap="innerHTML" hx-trigger="keyup changed delay:500ms" hx-post="/register/validate"
+            hx-indicator="#ind" placeholder="at least 8 characters long" required>
 
         <label for="confirm-password">Confirm Password</label>
         <input type="password" id="confirm-password" name="confirm-password" value=""
-            placeholder="at least 8 characters long" class="border rounded px-2 py-1 text-gray-900" required>
+            placeholder="at least 8 characters long" class="border rounded px-2 py-1 text-gray-900" hx-target="#check"
+            hx-swap="innerHTML" hx-trigger="keyup changed delay:500ms" hx-post="/register/validate" hx-indicator="#ind"
+            required>
     </div>
 
-    <div class="flex gap-2">
-        <button id="submit-btn" type="submit" disabled
-            class="rounded px-3 py-1 my-2 bg-blue-600 disabled:opacity-50 hover:bg-blue-500 text-white">
-            Let's go!
-        </button>
+    <div id="check">
+        <div class="flex gap-2">
+            <button id="submit-btn" type="submit" disabled
+                class="rounded px-3 py-1 my-2 bg-blue-600 disabled:opacity-50 hover:bg-blue-500 text-white">
+                Let's go!
+            </button>
+        </div>
         <img id="ind" src="/static/spin.svg" width="20" class="htmx-indicator">
     </div>
-
-    <p>
-        Already have an account?
-        <a href="/login" class="text-blue-500 hover:text-blue-400">Log In</a>
-    </p>
-    <p id="error"></p>
 </form>
-
-<script src="/static/registerForm.js">
-</script>
 
 {{ template "bottom" }}
