--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+{{ block "index" . }}
 {{ template "top" "Home // " }}
 
 <section class="mt-5 mb-10 text-gray-200 rounded-lg bg-primary bg-opacity-10">
@@ -42,6 +43,7 @@
         </section>
     </div>
 </section>
- */}}
+*/}}
 
 {{ template "bottom" }}
+{{ end }}
