Refactored register success page
Now all templates are defined as "proper pages" with some blocks defined
in the middle in case I only need to return a certain block by itself to
HTMX. This removes duplication of HTMX-related components.

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,7 +1,7 @@
 {{ block "register" . }}
 {{ template "top" "Register // " }}
 
-<form id="register" hx-post="/register" hx-target="this" hx-swap="innerHTML" hx-indicator="#ind"
+<form id="register" hx-post="/register" hx-target="this" hx-swap="outerHTML" hx-indicator="#ind"
     hx-disabled-elt="#submit-btn">
     <h3 class="text-2xl font-semibold mb-1">Register</h3>
     <p>
