--- a/templates/index.html
+++ b/templates/index.html
@@ -15,15 +15,18 @@
             for movies you want to watch.
         </p>
 
-        {{ if not .LoggedIn }}
         <div class="flex gap-3 items-center mt-5">
+            {{ if .LoggedIn }}
+            <button hx-get="/logout" hx-confirm="Are you sure to log out?" class="text-blue-500 hover:text-blue-400">Log
+                Out</button>
+            {{ else }}
             <a href="/register"
                 class="rounded px-3 py-1 bg-blue-600 disabled:opacity-50 hover:bg-blue-500 text-white">Join
                 PMDb</a>
             or
             <a href="/login" class="text-blue-500 hover:text-blue-400">Log In</a>
+            {{ end }}
         </div>
-        {{ end }}
     </blockquote>
 </section>
 
