--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,10 @@
     <blockquote class="px-5 py-7 my-3 border-l-4 border-primary">
 
         {{ if .LoggedIn }}
-        <h3 class="text-3xl font-semibold mb-2">Welcome, {{ .User.DisplayName }}!</h3>
+        <h3 class="text-3xl font-semibold mb-2">
+            Welcome,
+            <a class="text-primary" href="/profile/{{ .User.UserName }}">{{ .User.DisplayName }}</a>!
+        </h3>
         {{ else }}
         <h3 class="text-3xl font-semibold mb-2">Welcome!</h3>
         {{ end }}
