Sort "Now Playing" by descending popularity

--- a/templates/blocks/_bottom.html
+++ b/templates/blocks/_bottom.html
@@ -4,6 +4,8 @@
 <footer class="my-5">
     Brought to you by
     <a href="https://github.com/wipdev-tech" class="text-blue-500 hover:text-blue-400" target="_blank">Waseem</a>
+    with the help of
+    <a href="https://developer.themoviedb.org/docs/getting-started" class="text-blue-500 hover:text-blue-400" target="_blank">TMDB</a>
 </footer>
 
 </body>
