--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,7 @@
         </svg>
         Now Playing
     </h3>
+    <p>The most popular movies are shown first.</p>
     <ul class="grid md:grid-cols-5 gap-5 items-end justify-center">
         {{ range $i, $movie := .NowPlaying }}
         <li class="flex flex-col items-center">
