Some home page styling

--- a/templates/blocks/_top.html
+++ b/templates/blocks/_top.html
@@ -18,7 +18,7 @@
         rel="stylesheet">
 </head>
 
-<body class="bg-gray-950 text-gray-100 p-14 pb-2 font-body min-h-full flex flex-col">
+<body class="bg-gray-950 text-gray-100 p-14 pb-2 max-w-7xl mx-auto font-body min-h-full flex flex-col">
     <a href="/" class="flex flex-col md:flex-row md:items-end gap-3 text-primary mb-8">
         <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24">
             <path fill="currentColor"
