--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
         {{ if .LoggedIn }}
         <h3 class="text-3xl font-semibold mb-2">
             Welcome,
-            <a class="text-primary" href="/profile/{{ .User.UserName }}">{{ .User.DisplayName }}</a>!
+            <a class="text-primary" href="/profiles/{{ .User.UserName }}">{{ .User.DisplayName }}</a>!
         </h3>
         {{ else }}
         <h3 class="text-3xl font-semibold mb-2">Welcome!</h3>
@@ -57,10 +57,13 @@
     <p>The most popular movies are shown first.</p>
     <ul class="grid md:grid-cols-5 gap-8 items-end justify-center">
         {{ range $i, $movie := .NowPlaying }}
-        <li class="flex flex-col items-center">
-            <h4 class="font-semibold text-center mb-2 flex-grow h-full">{{ $movie.Title }}</h4>
-            <img class="rounded" width="200" src="https://image.tmdb.org/t/p/w500{{ $movie.PosterPath }}" alt="poster_path">
-        </li>
+        <a href="/movies/{{ $movie.ID }}">
+            <li class="flex flex-col items-center">
+                <h4 class="font-semibold text-center mb-2 flex-grow h-full">{{ $movie.Title }}</h4>
+                <img class="rounded" width="200" src="https://image.tmdb.org/t/p/w500{{ $movie.PosterPath }}"
+                    alt="poster_path">
+            </li>
+        </a>
         {{ end }}
     </ul>
 </section>
