--- a/internal/templs/movie.templ
+++ b/internal/templs/movie.templ
@@ -7,7 +7,7 @@ import (
 )
 
 templ Movie(data tmdbapi.MovieDetails) {
-	@Page("Home // ") {
+	@Page(data.Title) {
 		<div class="grid grid-cols-[1fr_2fr] gap-10">
 			<section>
 				<img
