Removed old templates + fixed tailwind config

--- a/internal/templs/index.templ
+++ b/internal/templs/index.templ
@@ -22,8 +22,8 @@ templ Index(data IndexData) {
 }
 
 templ WelcomeMessage(data IndexData) {
-	<section class="mt-5 mb-10 text-gray-200 rounded-lg bg-primary bg-opacity-10">
-		<blockquote class="px-5 py-7 my-3 border-l-4 border-primary">
+	<section class="mt-5 mb-10 text-gray-200 rounded-lg bg-sky-800 bg-opacity-10">
+		<blockquote class="px-5 py-7 my-3 border-l-4 border-sky-400">
 			if data.LoggedIn {
 				<h3 class="text-3xl font-semibold mb-2">
 					Welcome,
