Added credits api data to the movie details page

--- a/internal/templs/movie.templ
+++ b/internal/templs/movie.templ
@@ -1,31 +1,41 @@
 package templs
 
-import (
-	"github.com/wipdev-tech/pmdb/internal/tmdbapi"
-	"fmt"
-	t "github.com/a-h/templ"
-)
+import "github.com/wipdev-tech/pmdb/internal/tmdbapi"
 
-templ Movie(data tmdbapi.MovieDetails) {
-	@Page(data.Title) {
+type MovieData struct {
+	Details tmdbapi.MovieDetails
+	Cast    []tmdbapi.MovieCast
+}
+
+templ Movie(data MovieData) {
+	@Page(data.Details.Title) {
 		<div class="grid grid-cols-[1fr_2fr] gap-10">
 			<section>
 				<img
 					class="w-full"
-					src={ string(t.URL(fmt.Sprintf("https://image.tmdb.org/t/p/w500%v", data.PosterPath))) }
-					alt={ data.Title }
+					src={ buildPosterURL(data.Details.PosterPath) }
+					alt={ data.Details.Title }
 				/>
 			</section>
 			<section>
 				<div class="mb-8">
-					<h1 class="text-4xl font-semibold mb-2">{ data.Title }</h1>
+					<h1 class="text-4xl font-semibold mb-2">{ data.Details.Title }</h1>
 					<ul class="flex gap-2">
-						for _, genre := range data.Genres {
+						for _, genre := range data.Details.Genres {
 							<li class="px-2 border border-primary text-primary rounded-lg text-sm">{ genre.Name }</li>
 						}
 					</ul>
 				</div>
-				<p>{ data.Overview }</p>
+				<p>{ data.Details.Overview }</p>
+				<h1 class="text-3xl font-semibold mt-6 mb-3">Top Cast</h1>
+				<ul class="space-y-2">
+					for _, cast := range data.Cast {
+						<li>
+							<span class="text-primary font-bold">{ cast.Name }</span> &mdash;
+								{ cast.Character }
+						</li>
+					}
+				</ul>
 			</section>
 		</div>
 	}
