Login redirect to the requested URL + cookie fixes

--- a/internal/templs/login.templ
+++ b/internal/templs/login.templ
@@ -7,6 +7,7 @@ type LoginData struct {
 templ Login(data LoginData) {
 	@Page("Login") {
 		<form hx-post="/login" hx-target="#response" hx-swap="innerHTML">
+			<h3 class="text-2xl font-semibold mb-1">Log In</h3>
 			<div class="grid md:grid-cols-[9rem_1fr] gap-2 max-w-xl my-5">
 				<label for="user-name">User Name</label>
 				<input
